# internship

./: CMakeLists.txt  start.h
src/legkilo/: CMakeLists.txt  package.xml
src/legkilo/config/: diter.yaml
src/legkilo/include/: common.hpp  glog_utils.hpp  kinematics.h  lidar_processing.h  options.h  ros_interface.h  state_initial.hpp  timer_utils.hpp  voxel_grid.hpp  voxel_map.h  yaml_helper.hpp
src/legkilo/launch/: debug.launch.py  diter.launch.py  leg_fusion.launch.py
src/legkilo/rviz/: legkilo.rviz
src/legkilo/src/: kinematics.cc  leg_kilo_node.cc  lidar_processing.cc  options.cc  ros_interface.cc  voxel_map.cc
src/unitree_legged_msgs/: CMakeLists.txt
src/unitree_legged_msgs/install/: local_setup.sh  setup.sh
src/unitree_legged_msgs/install/unitree_legged_msgs/include/unitree_legged_msgs/unitree_legged_msgs/msg/: bms_cmd.h  bms_cmd.hpp  bms_state.h  bms_state.hpp  cartesian.h  cartesian.hpp  high_cmd.h  high_cmd.hpp  high_state.h  high_state.hpp  imu.h  imu.hpp  led.h  led.hpp  low_cmd.h  low_cmd.hpp  low_state.h  low_state.hpp  motor_cmd.h  motor_cmd.hpp  motor_state.h  motor_state.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
src/unitree_legged_msgs/install/unitree_legged_msgs/include/unitree_legged_msgs/unitree_legged_msgs/msg/detail/: bms_cmd__builder.hpp  bms_cmd__functions.h  bms_cmd__rosidl_typesupport_fastrtps_c.h  bms_cmd__rosidl_typesupport_fastrtps_cpp.hpp  bms_cmd__rosidl_typesupport_introspection_c.h  bms_cmd__rosidl_typesupport_introspection_cpp.hpp  bms_cmd__struct.h  bms_cmd__struct.hpp  bms_cmd__traits.hpp  bms_cmd__type_support.h  bms_cmd__type_support.hpp  bms_state__builder.hpp  bms_state__functions.h  bms_state__rosidl_typesupport_fastrtps_c.h  bms_state__rosidl_typesupport_fastrtps_cpp.hpp  bms_state__rosidl_typesupport_introspection_c.h  bms_state__rosidl_typesupport_introspection_cpp.hpp  bms_state__struct.h  bms_state__struct.hpp  bms_state__traits.hpp  bms_state__type_support.h  bms_state__type_support.hpp  cartesian__builder.hpp  cartesian__functions.h  cartesian__rosidl_typesupport_fastrtps_c.h  cartesian__rosidl_typesupport_fastrtps_cpp.hpp  (+95 more)
src/unitree_legged_msgs/install/unitree_legged_msgs/share/ament_index/resource_index/package_run_dependencies/: unitree_legged_msgs
src/unitree_legged_msgs/install/unitree_legged_msgs/share/ament_index/resource_index/parent_prefix_path/: unitree_legged_msgs
src/unitree_legged_msgs/install/unitree_legged_msgs/share/ament_index/resource_index/rosidl_interfaces/: unitree_legged_msgs
src/unitree_legged_msgs/install/unitree_legged_msgs/share/unitree_legged_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/unitree_legged_msgs/install/unitree_legged_msgs/share/unitree_legged_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_unitree_legged_msgs__rosidl_generator_cExport-noconfig.cmake  export_unitree_legged_msgs__rosidl_generator_cExport.cmake  export_unitree_legged_msgs__rosidl_generator_cppExport.cmake  export_unitree_legged_msgs__rosidl_generator_pyExport-noconfig.cmake  export_unitree_legged_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_unitree_legged_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  unitree_legged_msgsConfig-version.cmake  unitree_legged_msgsConfig.cmake  unitree_legged_msgs__rosidl_typesupport_cExport-noconfig.cmake  unitree_legged_msgs__rosidl_typesupport_cExport.cmake
src/unitree_legged_msgs/install/unitree_legged_msgs/share/unitree_legged_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
src/unitree_legged_msgs/install/unitree_legged_msgs/share/unitree_legged_msgs/msg/: BmsCmd.idl  BmsCmd.msg  BmsState.idl  BmsState.msg  Cartesian.idl  Cartesian.msg  HighCmd.idl  HighCmd.msg  HighState.idl  HighState.msg  IMU.idl  IMU.msg  LED.idl  LED.msg  LowCmd.idl  LowCmd.msg  LowState.idl  LowState.msg  MotorCmd.idl  MotorCmd.msg  MotorState.idl  MotorState.msg
src/unitree_legged_msgs/log/: latest_build
src/unitree_legged_msgs/msg/: LowState.msg
(+31 files in other folders)
